@@ -1,8 +1,8 @@
 #!/usr/bin/env bash
 
 JAVA=java
-JAVA_OPS="-Xmx2g -XX:+UseConcMarkSweepGC"
-LIB=mailer-1.0.0-SNAPSHOT.jar:lib/*
+JAVA_OPS="-Xmx2g"
+LIB=./*:target/lib/*
 $JAVA $JAVA_OPS -cp $LIB:conf/:templates/._class/ vn.com.vndirect.mail.MailerService &
 echo $! > PID
 
